5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4130/executions/1723_2504.log
== TEST (2019-05-13 22:18:10) 
-- CODE:
c = int(input("Quantidade inicial de copias: "))
l = int(input("Quantidade de leucocitos: "))
pv = int(input("Percentual do virus: ")) / 100
pl = int(input("Percentual dos leucocitos: ")) / 100

s = 0
d = 0

while(l < (2 * v)):
	v = v + pv * c
	l = l + pl * l
	d = d + 1
print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    while(l < (2 * v)):
NameError: name 'v' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 22:18:44) 
-- CODE:
c = int(input("Quantidade inicial de copias: "))
l = int(input("Quantidade de leucocitos: "))
pv = int(input("Percentual do virus: ")) / 100
pl = int(input("Percentual dos leucocitos: ")) / 100

s = 0
d = 0

while(l < (2 * c)):
	v = v + pv * c
	l = l + pl * l
	d = d + 1
print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    v = v + pv * c
NameError: name 'v' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 22:19:04) 
-- CODE:
c = int(input("Quantidade inicial de copias: "))
l = int(input("Quantidade de leucocitos: "))
pv = int(input("Percentual do virus: ")) / 100
pl = int(input("Percentual dos leucocitos: ")) / 100

s = 0
d = 0

while(l < (2 * c)):
	c = c + pv * c
	l = l + pl * l
	d = d + 1
print(d)
-- OUTPUT:
9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 22:19:13) 
-- CODE:
c = int(input("Quantidade inicial de copias: "))
l = int(input("Quantidade de leucocitos: "))
pv = int(input("Percentual do virus: ")) / 100
pl = int(input("Percentual dos leucocitos: ")) / 100

s = 0
d = 0

while(l < (2 * c)):
	c = c + pv * c
	l = l + pl * l
	d = d + 1
print(d)
-- EXECUTION TIME:
0.174211
-- TEST CASE 1:
---- input:
350625
5500
2
75
---- correct output:
9
---- user output:
9
-- TEST CASE 2:
---- input:
650090
90045
4
90
---- correct output:
5
---- user output:
5
-- TEST CASE 3:
---- input:
419250
1725
9
59
---- correct output:
17
---- user output:
17
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:15:42) 
-- CODE:
c = int(input("Quantidade inicial de copias: "))
l = int(input("Quantidade de leucocitos: "))
pv = int(input("Percentual do virus: ")) / 100
pl = int(input("Percentual dos leucocitos: ")) / 100

d = 0

while(l < (2 * c)):
	c = c + pv * c
	l = l + pl * l
	d = d + 1
print(d)
-- OUTPUT:
9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 11:18:53) 
-- CODE:
c = int(input("Quantidade inicial de copias: "))
l = int(input("Quantidade de leucocitos: "))
pv = int(input("Percentual do virus: ")) / 100
pl = int(input("Percentual dos leucocitos: ")) / 100

d = 0

while(l < (2 * c)):
	c = c + pv * c
	l = l + pl * l
	d = d + 1
print(d)
-- EXECUTION TIME:
0.149251
-- TEST CASE 1:
---- input:
350625
5500
2
75
---- correct output:
9
---- user output:
9
-- TEST CASE 2:
---- input:
650090
90045
4
90
---- correct output:
5
---- user output:
5
-- TEST CASE 3:
---- input:
419250
1725
9
59
---- correct output:
17
---- user output:
17
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 21:49:17) 
-- CODE:
c = int(input("Quantidade inicial de copias: "))
l = int(input("Quantidade inicial de leucocitos: "))
pv = int(input("Percentual do virus: ")) / 100
pl = int(input("Percentual de leucocito: ")) / 100

d = 0

while(l < (2 * c)):
	c = c + pv * c
	l = l + pl * l
	d = d + 1
print(d)
-- OUTPUT:
9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 21:49:25) 
-- CODE:
c = int(input("Quantidade inicial de copias: "))
l = int(input("Quantidade inicial de leucocitos: "))
pv = int(input("Percentual do virus: ")) / 100
pl = int(input("Percentual de leucocito: ")) / 100

d = 0

while(l < (2 * c)):
	c = c + pv * c
	l = l + pl * l
	d = d + 1
print(d)
-- EXECUTION TIME:
0.175043
-- TEST CASE 1:
---- input:
350625
5500
2
75
---- correct output:
9
---- user output:
9
-- TEST CASE 2:
---- input:
650090
90045
4
90
---- correct output:
5
---- user output:
5
-- TEST CASE 3:
---- input:
419250
1725
9
59
---- correct output:
17
---- user output:
17
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
